--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="test page ORLOVETS">
     <meta name="keywords" content="TEXT">
     <link href="https://fonts.googleapis.com/css?family=Roboto:400,500&display=swap&subset=cyrillic" rel="stylesheet">
-    <link type="text/css" rel="stylesheet" href="css/main2.css">
+    <link type="text/css" rel="stylesheet" href="css/main.css">
     <title>ZnaiMesta.ru</title>
 </head>
 <body>
